Disallow sending to rooms with insufficient powerlevel
Fixes #123

--- a/src/app/organisms/room/RoomViewInput.scss
+++ b/src/app/organisms/room/RoomViewInput.scss
@@ -3,6 +3,12 @@
   display: flex;
   min-height: 48px;
 
+  &__disallowed {
+    color: var(--tc-surface-low);
+    flex: 1;
+    text-align: center;
+  }
+
   &__space {
     min-width: 0;
     align-self: center;
