Make user avatar in chat clickable

--- a/src/app/atoms/text/Text.scss
+++ b/src/app/atoms/text/Text.scss
@@ -20,6 +20,10 @@
   @extend %text;
   @include font(h2, 500);
 }
+.text-h3 {
+  @extend %text;
+  @include font(h3, 500);
+}
 .text-s1 {
   @extend %text;
   @include font(s1, 400);
