--- a/src/app/organisms/profile-viewer/ProfileViewer.scss
+++ b/src/app/organisms/profile-viewer/ProfileViewer.scss
@@ -1,22 +1,58 @@
 .profile-viewer {
-    margin: 0 var(--sp-normal);
-    margin-right: var(--sp-extra-tight);
-    margin-top: var(--sp-extra-tight);
+    & .dialog__content-container {
+        padding: 0
+    }
 
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-      
-    &__buttons {
-        display: flex;
-        gap: var(--sp-normal);
-        margin-top: var(--sp-normal);
+    & .avatar-container {
+        margin-right: var(--sp-normal);
+    }
 
-        & .btn-primary, & .btn-danger {
-            padding: {
-                top: 11px;
-                bottom: 11px;
-            }
+    &__content {
+        padding: var(--sp-normal);
+
+        &-usernames {
+            display: flex;
+            flex-direction: column;
+            align-self: end;
         }
     }
+}
+
+.session-chip {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: var(--sp-ultra-tight) var(--sp-extra-tight);
+    margin: 0 var(--sp-extra-tight) var(--sp-extra-tight) 0;
+    background-color: var();
+    border-radius: var(--bo-radius);
+    box-shadow: var(--bs-surface-border);
+
+    max-width: max-content;
+
+    &__ring {
+        padding: {
+            left: var(--sp-tight);
+            right: var(--sp-loose);
+        }
+    
+        [dir=rtl] & {
+            padding: {
+            left: var(--sp-loose);
+            right: var(--sp-tight);
+            }
+        }
+    
+        .ic-raw {
+            margin-right: var(--sp-extra-tight);
+    
+            [dir=rtl] & {
+            margin: {
+                right: 0;
+                left: var(--sp-extra-tight);
+            }
+            }
+        }
+     }
 }
