Fix message menu placement on large screen (#113)
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/molecules/message/Message.scss
+++ b/src/app/molecules/message/Message.scss
@@ -262,6 +262,16 @@
     right: unset;
   }
 }
+@media (min-width: 1620px) {
+  .message__options {
+    right: unset;
+    left: 770px;
+    [dir=rtl] {
+      left: unset;
+      right: 770px
+    }
+  }
+}
 
 // markdown formating
 .message__content {
