Added logout in loading screen
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -32,3 +32,12 @@
   position: absolute;
   bottom: var(--sp-normal);
 }
+.loading__logout {
+  position: absolute;
+  bottom: var(--sp-extra-tight);
+  right: var(--sp-extra-tight);
+  cursor: pointer;
+  .text {
+    color: var(--tc-link);
+  }
+}
