Added variety of msg on loading app
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -27,6 +27,8 @@
 }
 .loading__message {
   margin-top: var(--sp-normal);
+  max-width: 350px;
+  text-align: center;
 }
 .loading__appname {
   position: absolute;
