Add option to select role on roomCreation
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/organisms/create-room/CreateRoom.scss
+++ b/src/app/organisms/create-room/CreateRoom.scss
@@ -9,6 +9,13 @@
     }
   }
 
+  & .segment-btn {
+    padding: var(--sp-ultra-tight) 0;
+    &__base {
+      padding: 0 var(--sp-tight);
+    }
+  }
+
   &__address {
     display: flex;
     &__label {
