Add basic support for displaying emotes
This only handles *displaying* emote events in a specific manner
recognizable as an emote.

It requires passing the sender name to message content elements, so that
the name can be in-lined into the message.

Sending emotes requires more changes. Namely better support for
commands. It would be required that they're not tied to the
completion framework for activation, but hooked on message being
sent and starting with a `/`. (WIP elsewhere)

--- a/src/app/molecules/message/Message.scss
+++ b/src/app/molecules/message/Message.scss
@@ -410,3 +410,14 @@
     }
   }
 }
+
+.message.message--type-emote {
+  .message__content {
+    font-style: italic;
+
+    // Remove blockness of first `<p>` so that markdown emotes stay on one line.
+    p:first-of-type {
+      display: inline;
+    }
+  }
+}
