--- a/src/app/templates/auth/Auth.scss
+++ b/src/app/templates/auth/Auth.scss
@@ -1,156 +1,144 @@
-.auth__wrapper {
+.auth__base {
+  --pattern-size: 48px;
   min-height: 100vh;
-  padding: var(--sp-loose);
   background-color: var(--bg-surface-low);
 
-  background-image: url("https://images.unsplash.com/photo-1562619371-b67725b6fde2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-image: radial-gradient(rgba(0, 0, 0, 6%) 2px, rgba(0, 0, 0, 0%) 2px);
+  background-size: var(--pattern-size) var(--pattern-size);
 
-  .auth-card {
-    width: 462px;
-    min-height: 644px;
-    background-color: var(--bg-surface-low);
-    border-radius: var(--bo-radius);
-    box-shadow: var(--bs-popup);
-    overflow: hidden;
-    display: flex;
-    flex-flow: row nowrap;
-    
-    &__interactive{
-      flex: 1;
-      min-width: 0;
-    }
+  display: flex;
+  flex-direction: column;
+}
+.auth__wrapper {
+  flex: 1;
+  padding: var(--sp-loose);
+  padding-bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.auth-footer {
+  padding: var(--sp-normal) 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    &__interactive {
-      padding: calc(var(--sp-normal) + var(--sp-extra-loose));
-      padding-bottom: var(--sp-extra-loose);
-      background-color: var(--bg-surface);
-    }
+  & > *:nth-child(2n) {
+    margin: 0 var(--sp-loose);
+  }
+  & a {
+    color: var(--tc-surface-normal);
+    &:hover { text-decoration: underline; }
+  }
+}
+.auth-card {
+  width: 462px;
+  background-color: var(--bg-surface);
+  border-radius: var(--bo-radius);
+  box-shadow: var(--bs-popup);
+  overflow: hidden;
 
+  &__content {
+    padding: var(--sp-extra-loose) calc(var(--sp-normal) + var(--sp-extra-loose));
+  }
+  &__switch {
+    margin-top: var(--sp-loose) !important;
   }
 }
 
-.app-ident {
-  margin-bottom: var(--sp-extra-loose);
-
-  &__logo {
-    width: 60px;
-    height: 60px;
+.homeserver-form,
+.auth-form__heading {
+  & .context-menu .btn-surface .ic-raw {
+    width: 0;
   }
-  &__text {
-    margin-left: calc(var(--sp-loose) + var(--sp-ultra-tight));
+}
 
-    .text-s1 {
-      margin-top: var(--sp-tight);
-      color: var(--tc-surface-normal);
+.homeserver-form {
+  display: flex;
+  margin-bottom: var(--sp-extra-tight);
+  & > .input-container {
+    flex: 1;
+    & .input {
+      border-right: unset;
+      border-radius: var(--bo-radius) 0 0 var(--bo-radius);
+      background-color: var(--bg-surface);
     }
+  }
+  & .ic-btn {
+    height: 46px;
+    align-self: flex-end;
+    border: 1px solid var(--bg-surface-border);
+    border-radius: 0 var(--bo-radius) var(--bo-radius) 0;
+  }
+  [dir=rtl] & {
+    & .input {
+      border-radius: 0 var(--bo-radius) var(--bo-radius) 0;
+      border-radius: 1px;
+      border-left: unset;
+    }
+    .ic-btn {
+      border-radius: var(--bo-radius) 0 0 var(--bo-radius);
+    }
+  }
 
-    [dir=rtl] & {
-      margin-left: 0;
-      margin-right:  calc(var(--sp-loose) + var(--sp-ultra-tight));
+  &__status {
+    margin-top: var(--sp-normal);
+    & .donut-spinner {
+      min-width: 28px;
     }
+    & .text {
+      margin: 0 var(--sp-tight);
+    }
+  }
+  &__error {
+    margin-bottom: var(--sp-normal) !important;
+    color: var(--tc-danger-normal) !important;
   }
 }
 
 .auth-form {
-
-  & > .text {
-    margin-bottom: var(--sp-loose);
-    margin-top: var(--sp-loose);
-  }
   & > .input-container {
-    margin-top: var(--sp-tight);
+    margin: var(--sp-tight) 0 var(--sp-ultra-tight);
+  }
+  
+  &__heading {
+    display: flex;
+    justify-content: space-between;
+    margin-top: calc(var(--sp-extra-loose) + var(--sp-tight));
   }
 
-  .submit-btn__wrapper {
-    margin-top: var(--sp-extra-loose);
-    margin-bottom: var(--sp-loose);
-    align-items: flex-start;
-
-    & > .error-message {
-      display: none;
-      flex: 1;
-      color: var(--tc-danger-normal);
-      margin-right: var(--sp-normal);
-      word-break: break;
-
-      [dir=rtl] & {
-        margin: {
-          right: 0;
-          left: var(--sp-normal);
-        }
-      }
-    }
+  &__btns {
+    padding-top: var(--sp-loose);
+    margin-bottom: var(--sp-extra-loose);
+    display: flex;
+    justify-content: flex-end;
   }
 
-  &__wrapper {
-    height: 100%;
+  &__error {
+    color: var(--tc-danger-normal) !important;
   }
 }
-
-.username__wrapper {
+.sso__divider {
+  margin-bottom: var(--sp-tight);
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 
-  & > :first-child {
+  &::before,
+  &::after {
     flex: 1;
-
-    .input {
-      border-radius: var(--bo-radius) 0 0 var(--bo-radius);
-
-      [dir=rtl] & {
-        border-radius:  0 var(--bo-radius) var(--bo-radius) 0;
-      }
-    }
-  }
-  & > :last-child {
-    width: 110px;
-
-    .input {
-      border-left-width: 0;
-      background-color: var(--bg-surface);
-      border-radius: 0 var(--bo-radius) var(--bo-radius) 0;
-
-      [dir=rtl] & {
-        border-left-width: 1px;
-        border-right-width: 0;
-        border-radius: var(--bo-radius) 0 0 var(--bo-radius);
-      }
-    }
-  }
-}
-
-.password__wrapper {
-  margin-top: var(--sp-tight);
-  position: relative;
-
-  & .ic-btn {
-    position: absolute;
-    right: 6px;
-    bottom: 6px;
-    border-radius: calc(var(--bo-radius) / 2);
-    [dir=rtl] & {
-      left: 6px;
-      right: unset;
-    }
+    content: '';
+    margin: var(--sp-tight);
+    border-bottom: 1px solid var(--bg-surface-border);
   }
 }
 
 @media (max-width: 462px) {
   .auth__wrapper {
-    padding: 0;
-    background-image: none;
-    background-color: var(--bg-surface);
-
-    .auth-card {
-      border-radius: 0;
-      box-shadow: none;
-
-      &__interactive {
-        padding: var(--sp-extra-loose);
-      }
+    padding: var(--sp-tight);
+  }
+  .auth-card {
+    &__content {
+      padding: var(--sp-loose) var(--sp-normal);
     }
   }
 }
