Removed some servers and fixed shadow on input in safari
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/templates/auth/Auth.scss
+++ b/src/app/templates/auth/Auth.scss
@@ -56,6 +56,7 @@
 .homeserver-form {
   display: flex;
   margin-bottom: var(--sp-extra-tight);
+  line-height: 0;
   & > .input-container {
     flex: 1;
     & .input {
