Fix login with CAS #165
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/index.scss
+++ b/src/index.scss
@@ -292,9 +292,10 @@ button {
 }
 textarea,
 input,
-input[type=text]
-input[type=username]
-input[type=password]
+input[type],
+input[type=text],
+input[type=username],
+input[type=password],
 input[type=email] {
   -webkit-appearance: none;
   -moz-appearance: none;
