Use formatted_body to parse markdown (#133) and partially implement #105, #19
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/atoms/scroll/_scrollbar.scss
+++ b/src/app/atoms/scroll/_scrollbar.scss
@@ -32,7 +32,8 @@
 
 @mixin scroll {
   overflow: hidden;
-  overscroll-behavior: none;
+  // Below code stop scroll when x-scrollable content come in timeline
+  // overscroll-behavior: none;
   @extend .firefox-scrollbar;
   @extend .webkit-scrollbar;
   @extend .webkit-scrollbar-track;
