--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,8 @@
 
   --bg-tooltip: #353535;
   --bg-badge: #989898;
+  --bg-ping: hsla(137deg, 100%, 68%, 40%);
+  --bg-ping-hover: hsla(137deg, 100%, 68%, 50%);
 
   /* text color | --tc-[background type]-[priority]: value */
   --tc-surface-high: #000000;
@@ -183,6 +185,9 @@
 
   --bg-tooltip: #000;
   --bg-badge: hsl(0, 0%, 75%);
+  --bg-ping: hsla(137deg, 100%, 38%, 40%);
+  --bg-ping-hover: hsla(137deg, 100%, 38%, 50%);
+
 
   /* text color | --tc-[background type]-[priority]: value */
   --tc-surface-high: rgba(255, 255, 255, 98%);
