Added unread indicator (#67), reply link back to original (#96)
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,7 @@
   --bg-badge: #989898;
   --bg-ping: hsla(137deg, 100%, 68%, 40%);
   --bg-ping-hover: hsla(137deg, 100%, 68%, 50%);
+  --bg-divider: hsla(0, 0%, 0%, .1);
 
   /* text color | --tc-[background type]-[priority]: value */
   --tc-surface-high: #000000;
@@ -187,6 +188,7 @@
   --bg-badge: hsl(0, 0%, 75%);
   --bg-ping: hsla(137deg, 100%, 38%, 40%);
   --bg-ping-hover: hsla(137deg, 100%, 38%, 50%);
+  --bg-divider: hsla(0, 0%, 100%, .1);
 
 
   /* text color | --tc-[background type]-[priority]: value */
