--- a/src/app/molecules/sidebar-avatar/SidebarAvatar.scss
+++ b/src/app/molecules/sidebar-avatar/SidebarAvatar.scss
@@ -14,6 +14,16 @@
 
     margin: 0 !important;
   }
+  & .avatar-container,
+  & .notification-badge {
+    transition: transform 200ms cubic-bezier(0, 0.8, 0.67, 0.97);
+  }
+  &:hover .avatar-container {
+    transform: translateX(4px)
+  }
+  &:hover .notification-badge {
+    transform: translate(calc(20% + 4px), -20%);
+  }
   &:focus {
     outline: none;
   }
@@ -33,7 +43,7 @@
 
     width: 3px;
     height: 12px;
-    background-color: var(--ic-surface-normal);
+    background-color: var(--tc-surface-high);
     border-radius: 0 4px 4px 0;
     transition: height 200ms linear;
 
