--- a/src/app/molecules/sidebar-avatar/SidebarAvatar.scss
+++ b/src/app/molecules/sidebar-avatar/SidebarAvatar.scss
@@ -16,7 +16,7 @@
   }
   & .avatar-container,
   & .notification-badge {
-    transition: transform 200ms cubic-bezier(0, 0.8, 0.67, 0.97);
+    transition: transform 200ms var(--fluid-push);
   }
   &:hover .avatar-container {
     transform: translateX(4px)
