Add typing outside focus on msg feild (#112)
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/organisms/search/Search.scss
+++ b/src/app/organisms/search/Search.scss
@@ -54,6 +54,7 @@
     &::after {
       position: absolute;
       top: 0;
+      z-index: 99;
       content: "";
       display: inline-block;
       width: 100%;
