--- a/src/app/organisms/navigation/Drawer.scss
+++ b/src/app/organisms/navigation/Drawer.scss
@@ -49,7 +49,7 @@
   &::before {
     position: absolute;
     top: 0;
-    
+    z-index: 99;
     content: '';
     display: inline-block;
     width: 100%;
